feat: Short Documentation about react state

--- a/notes/4.md
+++ b/notes/4.md
@@ -1,1 +1,16 @@
 ## What is react State
+
+[React: useState](https://react.dev/reference/react/useState)
+[Geek: ReactJS useState](https://www.geeksforgeeks.org/reactjs/reactjs-state/)
+
+- Data that a components **can nold over time**, necessary for information that it needs to remember throughout the app's lifecycle.
+- **"Components memory"** 🧠
+- **"State a Variable"/"Piece of State"**: A single variable in a components (components state)
+- Updating components state triggers React to **re-render the components**
+
+State allows Developers to:
+
+1. Update the components view (by re-rendering it)
+2. Persist local variables between renders
+
+[Next: Creating a state variable](./notes/5.md)
