feat:  theory again about useState and implement toogle open

--- a/notes/6.md
+++ b/notes/6.md
@@ -1,1 +1,19 @@
-## Dont state manually
+## Dont set state manually
+
+```jsx
+// useState in Practice
+// Dont use Let
+const [step, setStep] = useState(1);
+
+// const [test] = useState({name: "jonas"}) // dont write like this
+const [test, setTest] = useState({ name: "Jonas" });
+
+function handleNext() {
+  // step = step + 1; // ❗ Dont set State Manually
+  // test.name = "fred"; // ❗ BAD Practice
+  setTest({ name: "Bani" });
+  if (step < 3) setStep(step + 1);
+}
+```
+
+[Next: The Mechanics of states](./notes/7.md)
