feat: add Challenge components and short documentation about react developers tools

--- a/notes/4.md
+++ b/notes/4.md
@@ -13,4 +13,4 @@ State allows Developers to:
 1. Update the components view (by re-rendering it)
 2. Persist local variables between renders
 
-[Next: Creating a state variable](./notes/5.md)
+[Next: Creating a state variable](./5.md)
