--- a/notes/9.md
+++ b/notes/9.md
@@ -1,1 +1,9 @@
 ## React Developers tools
+
+[React Developer Tools](https://react.dev/learn/react-developer-tools)
+
+Use React Developer Tools to inspect React components, edit props and state, and identify performance problems.
+
+![react developer tools](https://react.dev/images/docs/react-devtools-extension.png)
+
+[Next: Updating State Based on Current State](./10.md)
