feat: using callback function in usestate

--- a/notes/10.md
+++ b/notes/10.md
@@ -1,1 +1,12 @@
 ## Updating State Based on Current State
+
+Use callback function for more safety
+
+```jsx
+function handlePrevious() {
+  if (step > 1)
+    setStep((currentStep) => {
+      return currentStep - 1;
+    });
+}
+```
