--- a/notes/4.md
+++ b/notes/4.md
@@ -1,6 +1,6 @@
 ## What is react State
 
-[React: useState](https://react.dev/reference/react/useState)
+[React: useState](https://react.dev/reference/react/useState) <br>
 [Geek: ReactJS useState](https://www.geeksforgeeks.org/reactjs/reactjs-state/)
 
 - Data that a components **can nold over time**, necessary for information that it needs to remember throughout the app's lifecycle.
